--- a/webchaxun1.html
+++ b/webchaxun1.html
@@ -141,7 +141,7 @@
                                                     <div class="w100 colorA3E line30 label">品牌</div>
                                                 </div>
                                                 <div class="van-col van-col--18">
-                                                    <div class="w100 colorfff fs16 line30 value">Shancai</div>
+                                                    <div class="w100 colorfff fs16 line30 value">ANGCAI</div>
                                                 </div>
                                             </div>
                                             <div class="van-row">
